Refactor Hmi code. Introduce Hmi class construct. Avoid global declarations. Automatic resize of Menu and Back buttons for better usability on touch devices.

--- a/html5/src/index.html
+++ b/html5/src/index.html
@@ -71,8 +71,7 @@ If not otherwise stated all graphics (independent of its format) are licensed un
         <p>This HTML5 application depends on enabled Javascript capabilities in your browser.</p>
         <p>Please consider enabling Javascript if disabled through settings.</p>
       </noscript>
-  <br />
-  <div id='panel'>
+  <div id='panel' style='margin-top: 4.7%;'>
     <table cellpadding='0' cellspacing='0'
       style='border: solid #777 4px; border-radius: 12px; background: #333;'>
     <tbody>
