Implement Hmi.prototype.renderBoard function to reduce overall code size.

--- a/html5/src/index.html
+++ b/html5/src/index.html
@@ -72,371 +72,22 @@ If not otherwise stated all graphics (independent of its format) are licensed un
         <p>Please consider enabling Javascript if disabled through settings.</p>
       </noscript>
       <div id='panel' style='margin-top: 4.7%;'>
-        <table cellpadding='0' cellspacing='0' id='idboard'><tbody>
-          <tr>
-            <td>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box celltopleft' id='cell00'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell01'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell02'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell10'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell11'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell12'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell20'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell21'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell22'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-            <td class='gridnotleft mid'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell03'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell04'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell05'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell13'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell14'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell15'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell23'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell24'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell25'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-            <td class='gridnotleft'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell06'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell07'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box celltopright' id='cell08'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell16'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell17'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell18'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell26'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell27'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell28'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-          </tr>
-          <tr>
-            <td class='gridnottop mid'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell30'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell31'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell32'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell40'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell41'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell42'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell50'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell51'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell52'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-            <td class='gridnotleft gridnottop'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell33'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell34'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell35'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell43'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell44'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell45'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell53'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell54'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell55'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-            <td class='gridnotleft gridnottop mid'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell36'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell37'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell38'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell46'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell47'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell48'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell56'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell57'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell58'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-          </tr>
-          <tr>
-            <td class='gridnottop'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell60'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell61'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell62'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell70'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell71'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell72'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box cellbottomleft' id='cell80'>
-                    <table class='notes' cellpadding='0' cellspacing='0'><tbody>
-                    <tr><td>+7</td><td>&not;8</td><td>+9</td></tr>
-                    <tr><td>&not;4</td><td></td><td>&not;6</td></tr>
-                    <tr><td>+1</td><td>+2</td><td>+3</td></tr>
-                    </tbody></table>
-                  </span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell81'>
-                    <table class='notes' cellpadding='0' cellspacing='0'><tbody>
-                    <tr><td>7</td><td>8</td><td>9</td></tr>
-                    <tr><td>4</td><td>5</td><td>6</td></tr>
-                    <tr><td>1</td><td>2</td><td>3</td></tr>
-                    </tbody></table>
-                  </span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell82'>
-                    <table class='notes' cellpadding='0' cellspacing='0'><tbody>
-                    <tr><td>7</td><td>8</td><td>9</td></tr>
-                    <tr><td>4</td><td>5</td><td>6</td></tr>
-                    <tr><td>1</td><td>2</td><td>3</td></tr>
-                    </tbody></table>
-                  </span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-            <td class='gridnotleft gridnottop mid'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell63'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell64'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell65'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell73'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell74'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell75'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell83'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell84'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell85'>3</span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-            <td class='gridnotleft gridnottop'>
-              <table cellpadding='0' cellspacing='0'><tbody>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell66'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell67'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell68'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td class='row'>
-                  <span class='board box' id='cell76'>1</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell77'>2</span>
-                </td>
-                <td class='cell row'>
-                  <span class='board box' id='cell78'>3</span>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <span class='board box' id='cell86'>1</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box' id='cell87'>2</span>
-                </td>
-                <td class='cell'>
-                  <span class='board box cellbottomright' id='cell88'>
-                    <table class='notes' cellpadding='0' cellspacing='0'><tbody>
-                    <tr><td>+7</td><td>&not;8</td><td>+9</td></tr>
-                    <tr><td>&not;4</td><td></td><td>&not;6</td></tr>
-                    <tr><td>+1</td><td>+2</td><td>+3</td></tr>
-                    </tbody></table>
-                  </span>
-                </td>
-              </tr>
-              </tbody></table>
-            </td>
-          </tr>
-        </tbody></table>
+<!-- span class='board box cellbottomleft' id='cell80'>
+  <table class='notes' cellpadding='0' cellspacing='0'><tbody>
+  <tr><td>+7</td><td>&not;8</td><td>+9</td></tr>
+  <tr><td>&not;4</td><td></td><td>&not;6</td></tr>
+  <tr><td>+1</td><td>+2</td><td>+3</td></tr>
+  </tbody></table>
+</span>
+<span class='board box cellbottomright' id='cell88'>
+  <table class='notes' cellpadding='0' cellspacing='0'><tbody>
+  <tr><td>+7</td><td>&not;8</td><td>+9</td></tr>
+  <tr><td>&not;4</td><td></td><td>&not;6</td></tr>
+  <tr><td>+1</td><td>+2</td><td>+3</td></tr>
+  </tbody></table>
+</span -->
+</div>
+<div>
         <table cellpadding='0' cellspacing='0' id='idedit'><tbody>
           <tr>
             <td class='row'>
