Update copyright. Migrate to jquery-2.2.4.js. Rename images.

--- a/html5/src/index.html
+++ b/html5/src/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html manifest="offline.appcache">
-<head profile="http://dublincore.org/documents/dcq-html/">
-  <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon" />
-  <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
-  <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta charset="UTF-8" />
-  <meta name="AUTHOR" content="Oliver Merkel" />
-  <meta name="COPYRIGHT" content="Oliver Merkel" />
-  <meta name="DC.creator" content="Oliver Merkel" />
-  <meta name="DC.contributor" content="Oliver Merkel" />
-  <meta name="DC.rights" content="
+<html>
+<head profile='http://dublincore.org/documents/dcq-html/'>
+  <link rel='icon' href='img/icons/favicon.ico' type='image/x-icon' />
+  <link rel='schema.DC' href='http://purl.org/dc/elements/1.1/' />
+  <link rel='schema.DCTERMS' href='http://purl.org/dc/terms/' />
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+  <meta charset='UTF-8' />
+  <meta name='AUTHOR' content='Oliver Merkel' />
+  <meta name='COPYRIGHT' content='Oliver Merkel' />
+  <meta name='DC.creator' content='Oliver Merkel' />
+  <meta name='DC.contributor' content='Oliver Merkel' />
+  <meta name='DC.rights' content="
 See file named LICENSE being part of the repository.
 
-Copyright (c) 2015
+Copyright (c) 2016
 @author Oliver Merkel, Merkel(dot)Oliver(at)web(dot)de.
 All rights reserved.
 
-Logos and trademarks belong to their respective owners.
+Logos, brands, and trademarks belong to their respective owners.
 
 All source code also including code parts written in HMTL, Javascript, CSS is under MIT License.
 
 The MIT License (MIT)
 
-Copyright (c) 2015 Oliver Merkel, Merkel(dot)Oliver(at)web(dot)de
+Copyright (c) 2016 Oliver Merkel, Merkel(dot)Oliver(at)web(dot)de
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the &quot;Software&quot;), to deal in
@@ -43,18 +43,18 @@ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 If not otherwise stated all graphics (independent of its format) are licensed under
-    http://creativecommons.org/licenses/by-nc-sa/4.0/deed.en_US
+    http://creativecommons.org/licenses/by-nc-sa/4.0
     Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.
 " />
   <title>Sudoku</title>
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <link rel="apple-touch-icon" href="img/icons/sudoku-128.png" />
+  <meta name='apple-mobile-web-app-capable' content='yes' />
+  <meta name='apple-mobile-web-app-status-bar-style' content='black' />
+  <link rel='apple-touch-icon' href='img/icons/sudoku128.png' />
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'
     name='viewport' />
   <link rel='stylesheet' type='text/css' href='thirdparty/jquery.mobile-1.4.5/jquery.mobile-1.4.5.css' />
   <link rel='stylesheet' type='text/css' href='css/index.css' />
-  <script src='thirdparty/jquery-1.11.2.js' type='text/javascript'></script> 
+  <script src='thirdparty/jquery-2.2.4.js' type='text/javascript'></script> 
   <script src='thirdparty/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js' type='text/javascript'></script>
   <script src='js/hmi.js' type='text/javascript' defer></script>
 </head>
@@ -222,13 +222,13 @@ If not otherwise stated all graphics (independent of its format) are licensed un
     </figure>
     <br />
     <h3>Legal</h3>
-    <p>Copyright (c) 2015<br />
+    <p>Copyright (c) 2016<br />
     <em>@author</em> Oliver Merkel, Merkel(dot) Oliver(at) web(dot) de.<br />
     All rights reserved.<br />
     Logos and trademarks belong to their respective owners.</p>
     <p>All source code also including code parts written in HMTL, Javascript, CSS is under MIT License.</p>
     <h4>The MIT License (MIT)</h4>
-    <p>Copyright (c) 2015 Oliver Merkel, Merkel(dot) Oliver(at) web(dot)de</p>
+    <p>Copyright (c) 2016 Oliver Merkel, Merkel(dot) Oliver(at) web(dot)de</p>
 
     <p>Permission is hereby granted, free of charge, to any person obtaining a copy of
     this software and associated documentation files (the &quot;Software&quot;), to deal in
@@ -248,16 +248,16 @@ If not otherwise stated all graphics (independent of its format) are licensed un
     CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 
     <p>If not otherwise stated all graphics (independent of its format) are licensed under
-      <br /><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.en_US"
-      target="_blank"><img alt="Creative Commons License" style="border-width:0"
-      src="img/icons/cc_by_nc_sa.png" /></a><br />Images are licensed under a
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.en_US"
-      target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0
+      <br /><a rel='license' href='http://creativecommons.org/licenses/by-nc-sa/4.0'
+      target='_blank'><img alt='Creative Commons License' style='border-width:0'
+      src='img/icons/cc_by_nc_sa.png' /></a><br />Images are licensed under a
+      <a rel='license' href='http://creativecommons.org/licenses/by-nc-sa/4.0'
+      target='_blank'>Creative Commons Attribution-NonCommercial-ShareAlike 4.0
       International License</a>.
     </p>
-    <div data-role="collapsible-set" data-theme="c" data-content-theme="d"
-      data-iconpos="right" data-collapsed-icon="arrow-l" data-expanded-icon="arrow-d">
-    <div data-role="collapsible">
+    <div data-role='collapsible-set' data-theme='c' data-content-theme='d'
+      data-iconpos='right' data-collapsed-icon='arrow-l' data-expanded-icon='arrow-d'>
+    <div data-role='collapsible'>
       <h4>Sudoku Principles and Concepts</h4>
       <p>The basic concept of number puzzles or more general just
         number constellations based on Latin squares belongs to
@@ -268,7 +268,7 @@ If not otherwise stated all graphics (independent of its format) are licensed un
         of the Japanese <i>Suji wa dokushin ni kagiru</i>. This could be
         translated to <i>Digits must be singletons</i>.</p>
     </div><!-- collapsible -->
-    <div data-role="collapsible">
+    <div data-role='collapsible'>
       <h4>Third Party Code Licenses</h4>
       <p>This <b>Sudoku</b> implementation uses unmodified
       independent code libraries provided by <em>third parties</em>.
@@ -278,15 +278,15 @@ If not otherwise stated all graphics (independent of its format) are licensed un
       any related list of conditions, disclaimers, and especially
       the copyright holders and authors of the corresponding third
       party functionality.</p>
-      <a href="https://github.com/jquery/jquery" data-role="button" data-theme="c"
-        rel="external" target="_blank" type="text/html"
-        title="jQuery - Repository">
-        <img src="thirdparty/jquery-favicon.ico" />
+      <a href='https://github.com/jquery/jquery' data-role='button' data-theme='c'
+        rel='external' target='_blank' type='text/html'
+        title='jQuery - Repository'>
+        <img src='thirdparty/jquery-favicon.ico' width='16' height='16' />
         jQuery: MIT</a>
-      <a href="https://github.com/jquery/jquery-mobile" data-role="button" data-theme="c"
-        rel="external" target="_blank" type="text/html"
-        title="jQuery Mobile - Repository">
-        <img src="thirdparty/jquery.mobile-1.4.5/demos/favicon.ico" />
+      <a href='https://github.com/jquery/jquery-mobile' data-role='button' data-theme='c'
+        rel='external' target='_blank' type='text/html'
+        title='jQuery Mobile - Repository'>
+        <img src='thirdparty/jquery.mobile-1.4.5/demos/favicon.ico' width='16' height='16' />
         jQuery Mobile: MIT</a>
     </div><!-- collapsible -->
     </div><!-- collapsible-set -->
