Replace labels for some keyboardActions to use SVG path instead of simple text (font)

--- a/html5/src/index.html
+++ b/html5/src/index.html
@@ -171,6 +171,7 @@ If not otherwise stated all graphics (independent of its format) are licensed un
             Japanese puzzle company Nikoli in mid 1980s. Sudoku is an abbreviation
             of the Japanese <i>Suji wa dokushin ni kagiru</i>. This could be
             translated to <i>Digits must be singletons</i>.</p>
+          <div id='stat'></div>
         </div>
         <h3>Third Party Code Licenses</h4>
         <div>
