--- a/html5/src/index.html
+++ b/html5/src/index.html
@@ -154,7 +154,7 @@ If not otherwise stated all graphics (independent of its format) are licensed un
           <p>Copyright (c) 2016, 2023<br />
           <em>@author</em> Oliver Merkel, Merkel(dot) Oliver(at) web(dot) de.<br />
           All rights reserved.<br />
-          Logos and trademarks belong to their respective owners.</p>
+          Logos, brands, and trademarks belong to their respective owners.</p>
           <p>All source code also including code parts written in HMTL, Javascript, CSS is under MIT License.</p>
           <h4>The MIT License (MIT)</h4>
           <p>Copyright (c) 2016, 2023 Oliver Merkel, Merkel(dot) Oliver(at) web(dot)de</p>
